--- a/coconut-code/build.gradle
+++ b/coconut-code/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.acan12'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     lintOptions {
         abortOnError false        // true by default
         checkAllWarnings false
@@ -14,12 +14,12 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion 23
+        targetSdkVersion 30
         versionCode 1
-        versionName "beta1.0"
+        versionName "beta1.1"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     }
 
@@ -30,11 +30,22 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    buildToolsVersion '28.0.3'
+
 }
 
 dependencies {
+    ext {
+        dagger2_version = '2.35'
+    }
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:design:28.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.google.android.material:material:1.0.0'
 
     implementation 'io.github.inflationx:calligraphy3:3.1.1'
     implementation 'io.github.inflationx:viewpump:2.0.3'
@@ -45,23 +56,28 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0' // Jackson as parser engine for retrofit
 //    implementation 'com.jakewharton:butterknife:9.0.0-rc2'  // ButterKnife
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2' // ButterKnife
-    implementation "com.google.dagger:dagger:2.8"  // Dagger 2
-    annotationProcessor "com.google.dagger:dagger-compiler:2.8" // Dagger 2
+    implementation "com.google.dagger:dagger:$dagger2_version"  // Dagger 2
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger2_version" // Dagger //
+    compileOnly 'javax.annotation:jsr250-api:1.0'
+
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+
     implementation 'io.reactivex.rxjava2:rxjava:2.1.1'   // RX
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1' // RX
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
 //    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.16'
+    implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 
-    implementation 'com.android.support:appcompat-v7:28.+'
+    //noinspection GradleCompatible
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
 
 allprojects {
     repositories {
-        jcenter()
         mavenCentral()
         maven { url "https://jitpack.io" }
     }
