--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     lintOptions {
         abortOnError false        // true by default
         checkAllWarnings false
@@ -11,11 +11,11 @@ android {
     }
     defaultConfig {
         applicationId "app.beelabs.com.coconut"
-        minSdkVersion 19
-        targetSdkVersion 26
+        minSdkVersion 23
+        targetSdkVersion 30
         versionCode 1
         versionName "2.0.13"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         debug {
@@ -32,6 +32,11 @@ android {
         targetCompatibility = '1.8'
     }
 
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+        exclude 'META-INF/rxjava.properties'
+    }
+
     sourceSets {
         main.res.srcDirs += ['src/main/res-activities',
                              'src/main/res-fragment',
@@ -44,14 +49,20 @@ android {
             force 'io.reactivex.rxjava2:rxandroid:2.0.1'
         }
     }
+
+    buildToolsVersion '28.0.3'
 }
 
 dependencies {
+    ext {
+        dagger2_version = '2.35'
+    }
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    //noinspection GradleCompatible
+    implementation 'com.google.android.material:material:1.0.0'
 
     // RX
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -61,15 +72,18 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0' // OkHttp logging
     implementation 'com.squareup.retrofit2:retrofit:2.3.0' // Retrofit
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0' // Jackson as parser engine for retrofit
-    implementation 'com.jakewharton:butterknife:9.0.0-rc2'  // ButterKnife
-    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2' // ButterKnife
-    implementation "com.google.dagger:dagger:2.8"  // Dagger 2
-    annotationProcessor "com.google.dagger:dagger-compiler:2.8" // Dagger 2
+//    implementation 'com.jakewharton:butterknife:9.0.0-rc2'  // ButterKnife
+//    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2' // ButterKnife
+    implementation "com.google.dagger:dagger:$dagger2_version"  // Dagger 2
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger2_version" // Dagger //
+    compileOnly 'javax.annotation:jsr250-api:1.0'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation project(':coconut-code')
+
+    implementation 'androidx.annotation:annotation:1.1.0'
 }
 
 
